[add] simple operation files

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 **/*main.c
 !/0x03-debugging/*main.c
 !/0x0D-preprocessor/2-main.c
+!/0x0F-function_pointers/3-main.c
 
 # Ignore object files and libraries
 *.o
